--- a/package.json
+++ b/package.json
@@ -33,8 +33,17 @@
     "babel-polyfill": "^6.23.0"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "connect-multiparty": "^2.1.1",
+    "cookie-parser": "^1.4.3",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
     "fluid-func": "^0.5.5",
+    "http-proxy": "^1.17.0",
     "log4js": "^3.0.2",
-    "mongoose": "^5.2.4"
+    "mongoose": "^5.2.4",
+    "morgan": "^1.9.0",
+    "node-fetch": "^2.2.0",
+    "socket.io": "^2.1.1"
   }
 }
